Added basic HTML

--- a/index.html
+++ b/index.html
@@ -1,8 +1,114 @@
 <!DOCTYPE html>
-
+<html>
 <head>
-    <title>Ted's blog</title>
+<title>Teddy Scotcher</title>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<style>
+* {
+  box-sizing: border-box;
+}
 
+/* Add a gray background color with some padding */
+body {
+  font-family: "Lucida Console", "Courier New", monospace;
+  padding: 20px;
+  background: #f1f1f1;
+}
+
+/* Header/Blog Title */
+.header {
+  padding: 30px;
+  font-size: 40px;
+  text-align: center;
+  background: white;
+}
+
+/* Create two unequal columns that floats next to each other */
+/* Left column */
+.leftcolumn {   
+  float: left;
+  width: 75%;
+}
+
+/* Right column */
+.rightcolumn {
+  float: left;
+  width: 25%;
+  padding-left: 20px;
+}
+
+/* Fake image */
+.fakeimg {
+  background-color: #aaa;
+  width: 100%;
+  padding: 20px;
+}
+
+/* Add a card effect for articles */
+.card {
+   background-color: white;
+   padding: 20px;
+   margin-top: 20px;
+}
+
+/* Clear floats after the columns */
+.row:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+
+/* Footer */
+.footer {
+  padding: 20px;
+  text-align: center;
+  background: #ddd;
+  margin-top: 20px;
+}
+
+/* Responsive layout - when the screen is less than 800px wide, make the two columns stack on top of each other instead of next to each other */
+@media screen and (max-width: 800px) {
+  .leftcolumn, .rightcolumn {   
+    width: 100%;
+    padding: 0;
+  }
+}
+</style>
 </head>
+<body>
 
+<div class="header">
+  <h2>Teddy Scotcher</h2>
+  <p>Climbing & recreational maths blog</p>
+</div>
+
+<div class="row">
+  <div class="leftcolumn">
+    <div class="card">
+      <h2>Beginning this blog</h2>
+      <h5>Added 25th Feb. 2024</h5>
+      <p>Here's my first post! I'll soon be adding my bouldering progress.</p>
+     </div> 
+  </div>
+  <div class="rightcolumn">
+    <div class="card">
+      <h2>About Me</h2>
+      <img src="uponthesign.png" style="height:400px;"></img>
+      <p>I'm a student who enjoys climbing (primarily indoor bouldering) and maths. This blog is to document my progress in both of these.</p>
+    </div>
+    <div class="card">
+      <h3>Follow Me</h3>
+      <a href="https://www.instagram.com/tesco.101/">Instagram</a> <br><br>
+      <a href="https://www.linkedin.com/in/teddy-scotcher-7a835b295/?originalSubdomain=uk">Linkedin</a> <br><br>
+      <a href="https://www.youtube.com/channel/UCZJCRLHP4JyFvEKwOtIs-pw">YouTube</a>
+
+    </div>
+  </div>
+</div>
+
+<div class="footer">
+  <h2>Made with HTML</h2>
+</div>
+
+</body>
 </html>
