--- a/index.html
+++ b/index.html
@@ -88,19 +88,21 @@ body {
       <h2>Beginning this blog</h2>
       <h5>Added 25th Feb. 2024</h5>
       <p>Here's my first post! I'll soon be adding my bouldering progress.</p>
+      <img src="waihaydrawing.png"></img><br>
+      <i>Official portrait circa. 2023</i>
      </div> 
   </div>
   <div class="rightcolumn">
     <div class="card">
       <h2>About Me</h2>
       <img src="uponthesign.png" style="height:400px;"></img>
-      <p>I'm a student who enjoys climbing (primarily indoor bouldering) and maths. This blog is to document my progress in both of these.</p>
+      <p>I'm a student in the UK who enjoys climbing (primarily indoor bouldering) and maths. This blog is to document my progress in both of these.</p>
     </div>
     <div class="card">
       <h3>Follow Me</h3>
-      <a href="https://www.instagram.com/tesco.101/">Instagram</a> <br><br>
       <a href="https://www.linkedin.com/in/teddy-scotcher-7a835b295/?originalSubdomain=uk">Linkedin</a> <br><br>
-      <a href="https://www.youtube.com/channel/UCZJCRLHP4JyFvEKwOtIs-pw">YouTube</a>
+      <a href="https://www.youtube.com/channel/UCZJCRLHP4JyFvEKwOtIs-pw">YouTube</a> <br> <br>
+      <a href="scotcherteddy@gmail.com">scotcherteddy@gmail.com</a>
 
     </div>
   </div>
